tests/idris2/error022/expected
1/1: Building UpdateLoc (UpdateLoc.idr)
Error: While processing right hand side of f. Can't find an implementation for FloatingPointPrimitives Nat.

UpdateLoc:5:14--5:19
 1 | record Nat2 where
 2 |   nat : Nat
 3 | 
 4 | f : Nat2 -> Nat2
 5 | f = { nat $= floor }
                  ^^^^^

